--- a/views/timestamp.html
+++ b/views/timestamp.html
@@ -13,11 +13,19 @@
     <hr />
     <div class="container">
       <ul>
-        <li><a href="/timestamp">TimeStamp Microservice FCC</a></li>
-        <li><a href="requestHeaderParser">Request Header Parser</a></li>
+        <li><a href="api/timestamp/2015-12-25">TimeStamp Microservice FCC</a></li>
+        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
       </ul>
+
+      <h3>Example Output:</h3>
+      <p>
+        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+      </p>
+    </div>
+    <div class="footer">
+      <p>
+        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
+      </p>
     </div>
   </body>
 </html>
-<!DOCTYPE html>
-
