--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,9 @@
     <div class="container">
       <ul>
         <li><a href="/timestamp">TimeStamp Microservice FCC</a></li>
-        <li><a href="requestHeaderParser">Request Header Parser</a></li>
+        <li><a href="/requestHeaderParser">Request Header Parser</a></li>
+        <li><a href="/urlShortenerMicroservice">URL Shortener Microservice</a></li>
+
       </ul>
     </div>
   </body>
